--- a/contact/index.html
+++ b/contact/index.html
@@ -6,27 +6,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akashdeep Pandey</title>
-    <link href="styles.css" rel="stylesheet">
-    
+    <link href="/styles.css" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 
 
 <body>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-   <ul class="nav justify-content-center nav-menu">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="project.html">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="eductation.html">Education</a>
-      </li>
-    </ul>
+   <ul class="nav justify-content-center nav-menu mt-3">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/project/">Projects</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/contact/">Contact</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/education/">Education</a>
+    </li>
+  </ul>
 
     <div class="container">
         <div class="row justify-content-center">
